--- a/UI-MVC/Views/Home/Index.cshtml
+++ b/UI-MVC/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
             <a href="@Url.Action("Register", "Account")" class="button">Join us</a>
         </div>
         <video autoplay="true" loop="true">
-            <source src="@Url.Content("~/Content/img/Beadbuddy_header.mp4")" type="video/mp4"/>
+            <source src="http://maarten.vg/img/Beatbuddy_header.mp4" type="video/mp4"/>
         </video>
     </div>
 }
