--- a/UI-MVC/Views/Home/LoggedIn.cshtml
+++ b/UI-MVC/Views/Home/LoggedIn.cshtml
@@ -1,7 +1,84 @@
-﻿
+﻿@using System.Configuration
+@using BB.BL.Domain.Organisations
+@using BB.BL.Domain.Playlists
+@using BB.UI.Web.MVC.Controllers.Utils
+
 @{
     ViewBag.Title = "LoggedIn";
 }
 
-<h2>LoggedIn</h2>
+@section LoggedInPageStyle{
+    <link href="@Url.Content("~/Content/LoggedIn.min.css")" rel="stylesheet" type="text/css" />
+}
 
+@section escape_padding {
+    <div id="banner" style="height: 300px; min-height: 300px;">
+        <div class="content">
+            <h2>Welcome, @ViewBag.Name</h2>
+        </div>
+    </div>
+}
+
+<section>
+    <div class="title">
+        <h1>My Organisations</h1>
+        @ViewBag.MyOrganisations.Count
+    </div>
+    <div class="container">
+        @foreach (Organisation organisation in ViewBag.MyOrganisations)
+        {
+            <div class="col-md-4 organisation-wrapper">
+                @{
+                    var organisationSource = "https://unsplash.com/photos/P8kVtyU32I0/download";
+                    if (organisation.BannerUrl != null)
+                    {
+                        //organisationSource = FileHelper.GetImage("OrganisationsImgPath", organisation.BannerUrl);
+                    }
+                }
+
+                <div style="background-image: url(@organisationSource)" class="organisation-banner">&nbsp;</div>
+
+                <h3>@organisation.Name</h3>
+
+                <div>@organisation.Playlists.Count playlists</div>
+            </div>
+                    }
+    </div>
+    <div class="clearfix">&nbsp;</div>
+</section>
+
+<section>
+    <div class="title">
+        <h1>My playlists</h1>
+        @ViewBag.MyPlaylists.Count
+    </div>
+
+    <div class="container">
+        @foreach (Playlist playlist in ViewBag.MyPlaylists)
+        {
+            <div class="col-md-4 organisation-wrapper">
+                @{
+                    var playlistSource = playlist.ImageUrl ?? "https://unsplash.com/photos/1wmfqA0rEjM/download";
+                }
+
+                <img src="@playlistSource" alt="playlist image" class="playlist-image"/>
+
+                <h3>@playlist.Name</h3>
+
+                <div>@playlist.PlaylistTracks.Count tracks</div>
+            </div>
+         }
+    </div>
+    <div class="clearfix">&nbsp;</div>
+</section>
+
+<section>
+    <div class="title">
+        <h1>Playlists</h1>
+        you might like
+    </div>
+    @foreach (Playlist playlist in ViewBag.RecommendedPlaylists)
+    {
+        <div>I am playlist @playlist.Name</div>
+    }
+</section>
