--- a/UI-MVC/Content/LoggedIn.scss
+++ b/UI-MVC/Content/LoggedIn.scss
@@ -12,6 +12,37 @@ h3
     margin-bottom: 0.2em;
 }
 
+.loggedin-banner
+{
+    width: 100%;
+    min-height: 300px;
+    z-index: 0;
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 1em;
+    background-image: url(https://unsplash.com/photos/pFqrYbhIAXs/download);
+    background-size: cover;
+    background-position: center center;    
+
+    .banner-content
+    {
+        padding: 5.2% 5em 3em 5em;
+        margin: 0 auto;
+        max-width: 1500px;
+        margin: 0 auto;
+        max-width: 1500px;
+        color: #fff;
+
+        h2
+        {
+            margin-top: 0;
+            margin-bottom: 1em;
+            font-weight: 200;
+            font-size: 2em;
+            text-shadow: 0 3px 5px rgba(0,0,0,.5);
+        }
+    }
+}
 .organisation-wrapper
 {
    padding: 0;
@@ -32,4 +63,9 @@ h3
     border-radius: 100%;
     float: left;
     margin-right: 16px;
+}
+
+.clear-playlist
+{
+    clear: both;
 }
