--- a/UI-MVC/Views/Shared/_LoginPartial.cshtml
+++ b/UI-MVC/Views/Shared/_LoginPartial.cshtml
@@ -11,6 +11,9 @@
             @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
         </li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+        <li>
+            @Html.ActionLink("My portal", "Portal", "Home", routeValues: null, htmlAttributes: new { title = "My portal" })
+        </li>
     </ul>
     }
 }
