--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -127,6 +127,45 @@ header {
     #banner {
       min-height: 270px; } }
 
+#playlistbanner {
+  width: 100%;
+  min-height: 250px;
+  z-index: 0;
+  position: relative;
+  overflow: hidden;
+  margin-bottom: 1em;
+  height: 250px;
+  background-image: url("/Content/img/playlistheader.jpg");
+  background-repeat: no-repeat;
+  background-size: cover; }
+  #playlistbanner .content {
+    padding: 5.2% 5em 3em 5em;
+    margin: 0 auto;
+    max-width: 1500px;
+    color: white; }
+    #playlistbanner .content h1 {
+      font-weight: 100;
+      color: white;
+      font-size: 4.3em;
+      margin-bottom: 0;
+      text-shadow: 0px 3px 10px rgba(0, 0, 0, 0.4); }
+    #playlistbanner .content h2 {
+      margin-top: 0;
+      margin-bottom: 1em;
+      font-weight: 200;
+      font-size: 2em;
+      text-shadow: 0px 3px 5px rgba(0, 0, 0, 0.5); }
+    @media screen and (max-width: 600px) {
+      #playlistbanner .content {
+        padding: 4% 1em 3em 1em; }
+        #playlistbanner .content h1 {
+          font-size: 2.5em; }
+        #playlistbanner .content h2 {
+          font-size: 1.6em; } }
+  @media screen and (max-width: 600px) {
+    #playlistbanner {
+      min-height: 270px; } }
+
 .intro-item i {
   display: inline-block;
   font-size: 4em;
@@ -347,7 +386,7 @@ header {
   width: 0.1%;
   height: 100%;
   background-color: black;
-  border: solid 1px; }
+  border: 0.2px solid; }
 
 .form-label {
   width: 90%;
@@ -369,7 +408,8 @@ header {
   border: 2px solid; }
 
 .borderround:hover {
-  border-color: #0000FF; }
+  border-color: black;
+  cursor: pointer; }
 
 .custom-validation {
   color: red;
@@ -455,4 +495,22 @@ footer {
 
 .hidden {
   display: none; }
+
+#footerSlideContainer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  min-width: 100%;
+  left: 0;
+  right: 0;
+  background: black; }
+
+#footerSlideContent {
+  width: 70%;
+  height: 20px;
+  margin: auto;
+  margin-top: 0.2em;
+  vertical-align: middle;
+  color: white;
+  border: none; }
 
