--- a/UI-MVC/Views/Playlist/AddTrack.cshtml
+++ b/UI-MVC/Views/Playlist/AddTrack.cshtml
@@ -1,13 +1,14 @@
 ﻿<div class="title">
     <h1>Add</h1> a track
 </div>
-
-<div class="form-group row">
-    @Html.Label("Search", new { @class = "col-md-2" })
-    <div class="col-md-10">
-        @Html.TextBox("query")
-    </div>
+<div class="first-form-group">
+    @Html.Label("Search your track here: ", new { @class = "control-label", style="margin-top: 1em" })
 </div>
+<div>
+    @Html.TextBox("query", null, new { @class = "custom-input-organisations", style="margin-top: 0.6em; width: 90%" })
+</div>
+
+
 
 <img id="loading" src="~/Content/img/round_shape_loader.gif" alt="loading" hidden />
 
@@ -55,8 +56,8 @@
             }).done(function () {
                 window.location.href = '@Url.Action("View", new { id = @ViewBag.PlaylistId })';
             })
-            .fail(function () {
-                alert('Failed!');
+            .fail(function (data) {
+                alert(data);
             });
         }
 
